fixed landing page on mobile screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -856,9 +856,6 @@ a.back-to-top:hover, a.back-to-top:focus {
   .landing{
     height: 800px;
   }
-  .landing-logo{
-    margin-top: 260px;
-  }
 }
 
 
